--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -11,6 +11,7 @@
 merged-docs.classpath = ${lib.dir}/forms-1.3.0.jar:\
                         ${lib.dir}/ij.jar:\
                         ${lib.dir}/log4j-1.2.15.jar:\
+                        ${lib.dir}/native-lib-loader-2.0-SNAPSHOT.jar:\
                         ${lib.dir}/netcdf-4.0.jar:\
                         ${lib.dir}/ome-java.jar:\
                         ${lib.dir}/ome-java-deprecated.jar:\
@@ -49,6 +50,7 @@ loci-tools.libraries = bio-formats.jar \
                        loci_plugins.jar \
                        mdbtools-java.jar \
                        metakit.jar \
+                       native-lib-loader-2.0-SNAPSHOT.jar \
                        netcdf-4.0.jar \
                        ome-xml.jar \
                        poi-loci.jar \
