--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -15,6 +15,7 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/native-lib-loader-2.0-SNAPSHOT.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar:\
                            ${lib.dir}/turbojpeg-1.2.1.jar
