Revert "Update version numbers to 4.4.4"
This reverts commit d4517f97bd2b463f75637f0d0198f3fb5fb4d9ca.

--- a/components/ome-plugins/build.properties
+++ b/components/ome-plugins/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = ome_plugins
 component.jar            = ome_plugins.jar
-component.version        = 4.4.4
+component.version        = 4.4-DEV
 component.classpath      = ${artifact.dir}/scifio.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/loci_plugins.jar:\
