--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = scifio
 component.jar            = scifio.jar
-component.version        = 4.4.4
+component.version        = 4.4-DEV
 component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
