Enable parallelization for the test-automated target
The thread count can be set using '-Dtestng.threadCount=xxx'.  By
default, it remains at 1.

See #9577.

--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -137,10 +137,18 @@ Type "ant -p" for a list of targets.
 
   <target name="test-automated" depends="compile"
     description="run automated tests in group 'automated'">
+
+    <condition property="testng.threadCount" value="1">
+      <not>
+        <isset property="testng.threadCount"/>
+      </not>
+    </condition>
+
     <testng sourcedir="${dest.dir}"
       annotations="Javadoc" groups="automated" testname="Automated tests"
       listeners="loci.tests.testng.DotTestListener,loci.tests.testng.OrderingListener"
       suitename="LOCI software test suite"
+      parallel="tests" threadCount="${testng.threadCount}"
       failureProperty="failedTest" useDefaultListeners="false">
       <classpath>
         <pathelement location="${classes.dir}"/>
