--- a/components/autogen/pom.xml
+++ b/components/autogen/pom.xml
@@ -105,11 +105,11 @@
   <!-- NB: for parent project, in case of partial checkout -->
   <repositories>
     <repository>
-      <id>loci.releases</id>
+      <id>imagej.releases</id>
       <url>http://maven.imagej.net/content/repositories/releases</url>
     </repository>
     <repository>
-      <id>loci.snapshots</id>
+      <id>imagej.snapshots</id>
       <url>http://maven.imagej.net/content/repositories/snapshots</url>
     </repository>
   </repositories>
