--- a/components/legacy/ome-editor/pom.xml
+++ b/components/legacy/ome-editor/pom.xml
@@ -98,11 +98,11 @@ OME-TIFF metadata.</projectName>
   <!-- NB: for project parent, in case of partial checkout -->
   <repositories>
     <repository>
-      <id>loci.releases</id>
+      <id>imagej.releases</id>
       <url>http://maven.imagej.net/content/repositories/releases</url>
     </repository>
     <repository>
-      <id>loci.snapshots</id>
+      <id>imagej.snapshots</id>
       <url>http://maven.imagej.net/content/repositories/snapshots</url>
     </repository>
   </repositories>
