--- a/components/loci-plugins/pom.xml
+++ b/components/loci-plugins/pom.xml
@@ -138,11 +138,11 @@ Data Browser and Stack Slicer.</projectName>
   <!-- NB: for project parent, in case of partial checkout -->
   <repositories>
     <repository>
-      <id>loci.releases</id>
+      <id>imagej.releases</id>
       <url>http://maven.imagej.net/content/repositories/releases</url>
     </repository>
     <repository>
-      <id>loci.snapshots</id>
+      <id>imagej.snapshots</id>
       <url>http://maven.imagej.net/content/repositories/snapshots</url>
     </repository>
   </repositories>
