Remove final traces of components/legacy from build

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -31,16 +31,13 @@ merged-docs.source    = ${root.dir}/components/bio-formats/build/src:\
                         ${root.dir}/components/test-suite/build/src:\
                         ${root.dir}/components/forks/jai/build/src:\
                         ${root.dir}/components/forks/mdbtools/build/src:\
-                        ${root.dir}/components/forks/poi/build/src:\
-                        ${root.dir}/components/legacy/ome-editor/build/src:\
-                        ${root.dir}/components/legacy/ome-notes/build/src
+                        ${root.dir}/components/forks/poi/build/src:
 merged-docs.memory    = 512m
 
 ### LOCI Common bundle ###
 loci-common.jar      = ${artifact.dir}/loci-common.jar
 loci-common.dir      = loci-common
-loci-common.libraries= loci-legacy.jar \
-                       scifio-devel.jar
+loci-common.libraries= scifio-devel.jar
 
 ### LOCI Tools bundle ###
 
@@ -50,7 +47,6 @@ loci-tools.dir       = loci-tools
 loci-tools.libraries = bio-formats.jar \
                        forms-1.3.0.jar \
                        jai_imageio.jar \
-                       loci-legacy.jar \
                        loci_plugins.jar \
                        mdbtools-java.jar \
                        metakit.jar \
