--- a/components/test-suite/log4j-target-test-runner.properties
+++ b/components/test-suite/log4j-target-test-runner.properties
@@ -6,13 +6,13 @@
 
 # Default log file
 log4j.rootCategory=debug, default
-log4j.appender.default=org.apache.log4j.FileAppender
+log4j.appender.default=loci.tests.TimestampedLogFileAppender
 log4j.appender.default.File=target-test-runner.log
 log4j.appender.default.layout=org.apache.log4j.PatternLayout
 log4j.appender.default.layout.ConversionPattern = %d %-10.10r [%10.10t] %-6.6p %40.40c %x - %m\n
 
 # Performance log file
-log4j.appender.performance=org.apache.log4j.FileAppender
+log4j.appender.performance=loci.tests.TimestampedLogFileAppender
 log4j.appender.performance.File=target-test-runner-performance.log
 log4j.appender.performance.layout=org.apache.log4j.PatternLayout
 log4j.appender.performance.layout.ConversionPattern = %d %-10.10r [%10.10t] %-6.6p %40.40c %x - %m\n
