Redirect a couple of additional URLs

--- a/components/loci-plugins/src/plugins.config
+++ b/components/loci-plugins/src/plugins.config
@@ -24,5 +24,5 @@ Plugins>LOCI, "-"
 Plugins>LOCI, "Update LOCI Plugins", loci.plugins.Updater("")
 
 Plugins>LOCI, "-"
-Plugins>LOCI, "Help", ij.plugin.BrowserLauncher("http://loci.wisc.edu/bio-formats/using-bio-formats")
+Plugins>LOCI, "Help", ij.plugin.BrowserLauncher("http://www.openmicroscopy.org/site/support/bio-formats/users/user-info.html")
 Help>About Plugins, "LOCI Plugins...", loci.plugins.About("")
