ant: Don't remove loci-legacy.jar

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -37,7 +37,8 @@ merged-docs.memory    = 512m
 ### LOCI Common bundle ###
 loci-common.jar      = ${artifact.dir}/loci-common.jar
 loci-common.dir      = loci-common
-loci-common.libraries= scifio-devel.jar
+loci-common.libraries= loci-legacy.jar \
+                       scifio-devel.jar
 
 ### LOCI Tools bundle ###
 
@@ -47,6 +48,7 @@ loci-tools.dir       = loci-tools
 loci-tools.libraries = bio-formats.jar \
                        forms-1.3.0.jar \
                        jai_imageio.jar \
+                       loci-legacy.jar \
                        loci_plugins.jar \
                        mdbtools-java.jar \
                        metakit.jar \
