Update TestNG and add AssumeNG

--- a/ant/global.properties
+++ b/ant/global.properties
@@ -13,7 +13,7 @@ lib.dir      = ${root.dir}/jar
 artifact.dir = ${root.dir}/artifacts
 
 # path to TestNG JAR
-testng.jar   = ${lib.dir}/testng-5.11-jdk15.jar
+testng.jar   = ${lib.dir}/testng-6.8.jar
 
 # copyright strings to use when generating javadocs
 copyright.begin = <i>Copyright &#169;
