--- a/components/test-suite/build.properties
+++ b/components/test-suite/build.properties
@@ -17,8 +17,10 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar:\
-                           ${lib.dir}/perf4j-0.9.13.jar
+                           ${lib.dir}/testng-6.8.jar:\
+                           ${lib.dir}/perf4j-0.9.13.jar:\
+                           ${lib.dir}/assumeng-1.2.2.jar:\
+                           ${lib.dir}/jcommander-1.7.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
