--- a/build.xml
+++ b/build.xml
@@ -276,7 +276,7 @@ Xalan Serializer
     License:   Apache
 
 TestNG
-    JAR file:  testng-5.11-jdk15.jar
+    JAR file:  testng-6.8.jar
     URL:       http://testng.org/
     Notes:     testing framework used for LOCI software automated test suite
     License:   Apache
