--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -19,7 +19,7 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${lib.dir}/junit-4.8.2.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
