--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -17,7 +17,7 @@ component.classpath      = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/ome-java.jar:\
                            ${lib.dir}/omero_client.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
@@ -34,4 +34,4 @@ component.classpath-no-omeio  = ${root.dir}/components/bio-formats/build/classes
                                 ${artifact.dir}/scifio.jar:\
                                 ${lib.dir}/log4j-1.2.15.jar:\
                                 ${lib.dir}/slf4j-api-1.5.10.jar:\
-                                ${lib.dir}/testng-5.11-jdk15.jar
+                                ${lib.dir}/testng-6.8.jar
