--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -17,7 +17,7 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
@@ -42,7 +42,7 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 
 # Used by TestNG suite that tests the absence of class from jai_imageio.jar
 component.cp.no-jai      = ${artifact.dir}/loci-legacy.jar:\
@@ -53,7 +53,7 @@ component.cp.no-jai      = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
 component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
@@ -64,4 +64,4 @@ component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
