--- a/components/scifio-devel/build.properties
+++ b/components/scifio-devel/build.properties
@@ -12,7 +12,8 @@ component.version        = 4.4-DEV
 component.classpath      = ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-6.8.jar
+                           ${lib.dir}/testng-6.8.jar:\
+                           ${lib.dir}/jcommander-1.7.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
