--- a/components/ome-xml/build.properties
+++ b/components/ome-xml/build.properties
@@ -10,8 +10,7 @@ component.name           = ome-xml
 component.jar            = ome-xml.jar
 component.version        = 4.5-DEV
 component.classpath      = ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-6.8.jar:\
-                           ${lib.dir}/jcommander-1.7.jar
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
