--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -17,7 +17,8 @@ merged-docs.classpath = ${lib.dir}/forms-1.3.0.jar:\
                         ${lib.dir}/omero_client.jar:\
                         ${lib.dir}/slf4j-api-1.5.10.jar:\
                         ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                        ${lib.dir}/testng-5.11-jdk15.jar
+                        ${lib.dir}/testng-6.8.jar:\
+                        ${lib.dir}/assumeng-1.2.3-jdk15.jar
 merged-docs.dir       = ${root.dir}/build/docs
 merged-docs.source    = ${root.dir}/components/bio-formats/build/src:\
                         ${root.dir}/components/common/build/src:\
