--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -13,7 +13,7 @@ component.classpath      = ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-6.8
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
