--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -65,6 +65,18 @@ Type "ant -p" for a list of targets.
     <fail if="failedTest"/>
   </target>
 
+  <target name="test-minimal-convert" depends="compile"
+    description="run conversion tests with fixed input data">
+    <testng testname="Minimal conversion tests" failureProperty="failedTest">
+      <classpath>
+        <pathelement location="${classes.dir}"/>
+        <pathelement path="${component.runtime-cp}"/>
+      </classpath>
+      <classfileset file="${classes.dir}/loci/tests/testng/ConversionTest.class"/>
+    </testng>
+    <fail if="failedTest"/>
+  </target>
+
   <target name="test-convert" depends="compile"
     description="run automated tests on writers">
     <testng sourcedir="${dest.dir}"
