Renamed bf-itk-pipe to bf-itk
As there is just one BF-ITK implementation now, there is no need to add
a differentiating tag.

--- a/components/native/pom.xml
+++ b/components/native/pom.xml
@@ -19,7 +19,7 @@
   <description>Umbrella project for native code software projects.</description>
 
   <modules>
-    <module>bf-itk-pipe</module>
+    <module>bf-itk</module>
   </modules>
 
   <!-- NB: for parent project -->
