Fix the "bftools.files" property to match the contents of tools/

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -87,18 +87,19 @@ bftools.files = bfconvert \
                 bfconvert.bat \
                 bfview \
                 bfview.bat \
+                config.bat \
+                config.sh \
                 domainlist \
                 domainlist.bat \
-                editor \
-                editor.bat \
                 formatlist \
                 formatlist.bat \
                 ijview \
                 ijview.bat \
-                notes \
-                notes.bat \
+                log4j.properties \
                 omeul \
                 omeul.bat \
+                scifio.bat \
+                scifio.sh \
                 showinf \
                 showinf.bat \
                 tiffcomment \
@@ -106,9 +107,4 @@ bftools.files = bfconvert \
                 xmlindent \
                 xmlindent.bat \
                 xmlvalid \
-                xmlvalid.bat \
-                log4j.properties \
-                config.bat \
-                config.sh \
-                launch.bat \
-                launch.sh
+                xmlvalid.bat
