--- a/components/xsd-fu/templates/MetadataRetrieve.template
+++ b/components/xsd-fu/templates/MetadataRetrieve.template
@@ -92,6 +92,7 @@
 
 package loci.formats.meta;
 
+import ome.xml.model.*;
 import ome.xml.model.enums.*;
 import ome.xml.model.primitives.*;
 
@@ -130,6 +131,8 @@ public interface MetadataRetrieve {
 	int getPixelsBinDataCount(int imageIndex);
 
 	String getLightSourceType(int instrumentIndex, int lightSourceIndex);
+
+  String getShapeType(int roiIndex, int shapeIndex);
 
 	// -- Entity counting (code generated definitions) --
 
@@ -187,14 +190,16 @@ public interface MetadataRetrieve {
 {% if is_abstract(k) %}\
 {% for prop in sorted_properties(model.getObjectByName(k)) %}\
 {% choose %}\
-{% when not prop.isPrimitive %}\
+{% when not prop.isPrimitive and prop.isChoice %}\
 	// Ignoring ${prop.name} of parent abstract type
 {% end %}\
 {% otherwise %}\
 {% for parent_k, parent_v in indexes[k].items() %}\
+{% if not prop.isBackReference %}\
 	// ${prop.name} accessor from parent ${k}
 ${getter(k, o, prop, v)}
 
+{% end %}\
 {% end %}\
 {% end %}\
 {% end %}\
