--- a/components/xsd-fu/templates/MetadataStore.template
+++ b/components/xsd-fu/templates/MetadataStore.template
@@ -92,6 +92,7 @@
 
 package loci.formats.meta;
 
+import ome.xml.model.*;
 import ome.xml.model.enums.*;
 import ome.xml.model.primitives.*;
 
@@ -184,14 +185,16 @@ public interface MetadataStore
 {% if is_abstract(k) %}\
 {% for prop in sorted_properties(model.getObjectByName(k)) %}\
 {% choose %}\
-{% when not prop.isPrimitive %}\
+{% when not prop.isPrimitive and prop.isChoice %}\
 	// Ignoring ${prop.name} of parent abstract type
 {% end %}\
 {% otherwise %}\
 {% for parent_k, parent_v in indexes[k].items() %}\
+{% if not prop.isBackReference %}\
 	// ${prop.name} accessor from parent ${k}
 ${setter(k, o, prop, v)}
 
+{% end %}\
 {% end %}\
 {% end %}\
 {% end %}\
