--- a/components/xsd-fu/templates/OmeroMetadata.template
+++ b/components/xsd-fu/templates/OmeroMetadata.template
@@ -190,6 +190,7 @@ import ome.system.ServiceFactory;
 import ome.tools.hibernate.ProxyCleanupFilter;
 import ome.tools.hibernate.QueryBuilder;
 import ome.util.Filterable;
+import ome.xml.model.*;
 import ome.xml.model.enums.*;
 import ome.xml.model.primitives.*;
 import omero.model.*;
@@ -473,7 +474,7 @@ ${counter(k, o, v)}\
 {% if is_abstract(k) %}\
 {% for prop in sorted_properties(model.getObjectByName(k)) %}\
 {% choose %}\
-{% when not prop.isPrimitive %}\
+{% when not prop.isPrimitive and prop.isChoice %}\
     // Ignoring ${prop.name} of parent abstract type
 {% end %}\
 {% otherwise %}\
