--- a/components/scifio-devel/pom.xml
+++ b/components/scifio-devel/pom.xml
@@ -69,6 +69,10 @@
     </dependency>
   </dependencies>
 
+  <properties>
+    <project.rootdir>${basedir}/../..</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
