--- a/components/test-suite/pom.xml
+++ b/components/test-suite/pom.xml
@@ -80,6 +80,10 @@
     </dependency>
   </dependencies>
 
+  <properties>
+    <project.rootdir>${basedir}/../..</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
