Add project.rootdir that always points to toplevel
This is a bit of a burden to maintain when projects are added or moved,
but makes it easier to point to files off the root path. Usually doing
so is a bad idea anyway, but in some cases it is nice to have access to
shared configuration, such as the files in the license folder.

--- a/components/native/bf-itk-pipe/pom.xml
+++ b/components/native/bf-itk-pipe/pom.xml
@@ -17,6 +17,10 @@
   <name>BF-ITK Pipes</name>
   <inceptionYear>2010</inceptionYear>
 
+  <properties>
+    <project.rootdir>${basedir}/../../..</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
