Add project.rootdir that always points to toplevel
This is a bit of a burden to maintain when projects are added or moved,
but makes it easier to point to files off the root path. Usually doing
so is a bad idea anyway, but in some cases it is nice to have access to
shared configuration, such as the files in the license folder.

--- a/components/legacy/ome-editor/pom.xml
+++ b/components/legacy/ome-editor/pom.xml
@@ -57,6 +57,10 @@
     <!-- NB: dependency:analyze has false warning about xml-apis:xml-apis. -->
   </dependencies>
 
+  <properties>
+    <project.rootdir>${basedir}/../../..</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
