--- a/components/native/bf-itk-jni/pom.xml
+++ b/components/native/bf-itk-jni/pom.xml
@@ -17,6 +17,10 @@
   <name>BF-ITK JNI</name>
   <inceptionYear>2011</inceptionYear>
 
+  <properties>
+    <project.rootdir>${basedir}/../../..</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
