Move license-maven-plugin config off the server
Previously, we stored the license configuration at:

    http://code.imagej.net/licenses

But it was a pain to keep that updated and in sync with the codebase
here. It makes more sense to use a local license resolver.

Thanks to Johannes Schindelin for the idea.

--- a/components/native/bf-itk-pipe/pom.xml
+++ b/components/native/bf-itk-pipe/pom.xml
@@ -37,7 +37,7 @@
           <roots>
             <root>.</root>
           </roots>
-          <licenseName>bf-itk-pipe</licenseName>
+          <licenseName>bf-itk</licenseName>
           <projectName>Bio-Formats plugin for the Insight Toolkit.</projectName>
           <organizationName>Insight Software Consortium, and Open Microscopy
 Environment:
