--- a/components/native/bf-itk-jace/pom.xml
+++ b/components/native/bf-itk-jace/pom.xml
@@ -37,7 +37,7 @@
           <roots>
             <root>.</root>
           </roots>
-          <licenseName>bf-itk-jace</licenseName>
+          <licenseName>bf-itk</licenseName>
           <projectName>Bio-Formats plugin for the Insight Toolkit.</projectName>
         </configuration>
       </plugin>
