Remove hard dependency on log4j from core Bio-Formats/SCIFIO

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -56,7 +56,8 @@ loci-tools.libraries = bio-formats.jar \
                        xalan-2.7.1.jar \
                        slf4j-api-1.5.10.jar \
                        slf4j-log4j12-1.5.10.jar \
-                       log4j-1.2.15.jar
+                       log4j-1.2.15.jar \
+                       scifio-tools.jar
 
 ### OME Tools bundle ###
 
