--- a/components/common/build.properties
+++ b/components/common/build.properties
@@ -18,8 +18,6 @@ component.resources-bin  =
 component.resources-text = loci/common/services/services.properties
 
 component.main-class     =
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
 
 testng.xml.template      = ${tests.dir}/loci/common/utests/testng-template.xml
