--- a/components/ome-xml/build.properties
+++ b/components/ome-xml/build.properties
@@ -18,8 +18,6 @@ component.resources-bin  =
 component.resources-text = ome/xml/model/*.xsl
 
 component.main-class     = ome.xml.About
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
 
 testng.xml               = ${tests.dir}/ome/xml/utests/testng.xml
