--- a/components/scifio-tools/pom.xml
+++ b/components/scifio-tools/pom.xml
@@ -12,7 +12,7 @@
     <relativePath>../..</relativePath>
   </parent>
 
-  <artifactId>scifio</artifactId>
+  <artifactId>scifio-tools</artifactId>
 
   <name>SCIFIO</name>
   <description>SCientific Image Format Input and Output: an open source
@@ -51,6 +51,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupid>
+      <artifactId>scifio</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.jgoodies</groupId>
       <artifactId>forms</artifactId>
       <version>1.2.1</version>
@@ -63,6 +68,19 @@
 
     <!-- NB: dependency:analyze has false warning about xml-apis:xml-apis. -->
 
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.10</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <!-- NB: We want this, despite warning from dependency:analyze. -->
       <groupId>xalan</groupId>
@@ -85,42 +103,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>loci.maven.plugins</groupId>
-        <artifactId>cppwrap-maven-plugin</artifactId>
-        <version>1.1.1</version>
-        <configuration>
-          <headerFile>cppwrap/header.txt</headerFile>
-          <conflictsFile>cppwrap/conflicts.txt</conflictsFile>
-          <coreFile>cppwrap/core.txt</coreFile>
-          <sourceDir>cppwrap</sourceDir>
-          <libraries>
-            <library>${project.groupId}:loci-common:jar:${project.version}</library>
-            <library>${project.groupId}:ome-xml:jar:${project.version}</library>
-          </libraries>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <configuration>
-          <licenseName>scifio</licenseName>
-          <projectName>OME SCIFIO package for reading and converting scientific file formats.</projectName>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
   <developers>
     <developer>
