--- a/components/forks/poi/pom.xml
+++ b/components/forks/poi/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio</artifactId>
-    <version>4.4.6-SNAPSHOT</version>
+    <version>4.4.6</version>
     <relativePath>../../..</relativePath>
   </parent>
 
