--- a/components/native/benchmark/pom.xml
+++ b/components/native/benchmark/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio-native</artifactId>
-    <version>4.4.6-SNAPSHOT</version>
+    <version>4.4.6</version>
   </parent>
 
   <artifactId>pom-scifio-native-benchmark</artifactId>
