--- a/components/native/bf-itk-jni/pom.xml
+++ b/components/native/bf-itk-jni/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio-native</artifactId>
-    <version>4.4.6</version>
+    <version>4.4.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>pom-scifio-native-bf-itk-jni</artifactId>
