--- a/components/test-suite/pom.xml
+++ b/components/test-suite/pom.xml
@@ -69,6 +69,11 @@
       <version>1.5.10</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j</artifactId>
+      <version>1.5.10</version>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.8</version>
