--- a/components/test-suite/build.properties
+++ b/components/test-suite/build.properties
@@ -16,6 +16,7 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar:\
                            ${lib.dir}/perf4j-0.9.13.jar
 component.java-version   = 1.5
