Add slf4j-log4j to the test classpaths
This allows the tests to pass without requiring slf4j-log4j across the
board.

--- a/components/scifio/build.xml
+++ b/components/scifio/build.xml
@@ -22,7 +22,11 @@ Type "ant -p" for a list of targets.
       <classpath>
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
+        <pathelement location="${test-classes.dir}"/>
+        <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-Dlurawave.license=XXX"/>
@@ -38,6 +42,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-lurawave}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -54,6 +60,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-jai}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -70,6 +78,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-xml}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
