--- a/components/common/build.xml
+++ b/components/common/build.xml
@@ -26,6 +26,8 @@ Type "ant -p"  for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -47,6 +49,8 @@ Type "ant -p"  for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
