--- a/components/metakit/build.xml
+++ b/components/metakit/build.xml
@@ -25,6 +25,8 @@ Type "ant -p"  for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
     </testng>
@@ -43,6 +45,8 @@ Type "ant -p"  for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <sysproperty key="filename" value="${filename}"/>
