--- a/components/test-suite/pom.xml
+++ b/components/test-suite/pom.xml
@@ -70,7 +70,7 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j</artifactId>
+      <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.10</version>
     </dependency>
     <dependency>
