Fix POMs to include slf4j-log4j and log4j as test dependencies

--- a/components/ome-io/pom.xml
+++ b/components/ome-io/pom.xml
@@ -69,6 +69,13 @@
       <version>5.12.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
