--- a/components/loci-plugins/pom.xml
+++ b/components/loci-plugins/pom.xml
@@ -72,6 +72,13 @@
       <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
