--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -101,6 +101,20 @@
       <version>5.12.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
