Remove hard dependency on log4j
Conflicts:
	components/autogen/pom.xml
	components/metakit/build.properties
	components/ome-xml/pom.xml

--- a/components/autogen/pom.xml
+++ b/components/autogen/pom.xml
@@ -57,6 +57,13 @@
       <version>1.5.10</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>5.12.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
