Remove hard dependency on log4j

--- a/components/autogen/pom.xml
+++ b/components/autogen/pom.xml
@@ -43,6 +43,12 @@
       <artifactId>velocity</artifactId>
       <version>1.6.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>5.12.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
