--- a/components/metakit/build.properties
+++ b/components/metakit/build.properties
@@ -11,8 +11,6 @@ component.jar            = metakit.jar
 component.version        = 4.5-DEV
 component.classpath      = ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
@@ -21,7 +19,6 @@ component.resources-bin  =
 component.resources-text =
 
 component.main-class     =
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
 
 testng.xml.template      = ${tests.dir}/ome/metakit/utests/testng-template.xml
