--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -15,7 +15,6 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
@@ -30,7 +29,6 @@ component.resources-text = loci/formats/*.txt \
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/serializer-2.7.1.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/xalan-2.7.1.jar
 
 # Used by TestNG suite that tests the absence of classes from ome-xml.jar
@@ -40,7 +38,7 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
 
@@ -50,9 +48,7 @@ component.cp.no-jai      = ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
@@ -61,7 +57,5 @@ component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
