--- a/components/loci-legacy/build.xml
+++ b/components/loci-legacy/build.xml
@@ -23,6 +23,7 @@ Type "ant -p" for a list of targets.
     </copy>
     <testng failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
@@ -44,6 +45,7 @@ Type "ant -p" for a list of targets.
     </copy>
     <testng failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
