--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -49,6 +49,7 @@ Type "ant -p" for a list of targets.
     <testng testname="TIFF compression tests"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -61,6 +62,7 @@ Type "ant -p" for a list of targets.
     description="run conversion tests with fixed input data">
     <testng testname="Minimal conversion tests" failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -76,6 +78,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -95,6 +98,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest" useDefaultListeners="false">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -119,6 +123,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -151,6 +156,7 @@ Type "ant -p" for a list of targets.
       parallel="tests" threadCount="${testng.threadCount}"
       failureProperty="failedTest" useDefaultListeners="false">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -175,6 +181,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -199,6 +206,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -223,6 +231,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -247,6 +256,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
@@ -271,6 +281,7 @@ Type "ant -p" for a list of targets.
       suitename="LOCI software test suite"
       failureProperty="failedTest">
       <classpath>
+        <pathelement location="${root.dir}/tools/"/><!-- log4j.properties -->
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
       </classpath>
