Remove slf4j-log4j12 from all components
As in 5fea921a33ea0, remove slf4j-log4j12 from the runtime
classpath properties to prevent warnings about multiple
implementations.

--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -29,7 +29,7 @@ component.resources-text = plugins.config \
                            loci/plugins/in/*.txt \
 
 component.main-class     = loci.plugins.About
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 component.junit          = true
