--- a/components/metakit/build.properties
+++ b/components/metakit/build.properties
@@ -21,7 +21,7 @@ component.resources-bin  =
 component.resources-text =
 
 component.main-class     =
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 testng.xml.template      = ${tests.dir}/ome/metakit/utests/testng-template.xml
