--- a/components/test-suite/build.properties
+++ b/components/test-suite/build.properties
@@ -19,8 +19,8 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar:\
                            ${lib.dir}/perf4j-0.9.13.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/assumeng-1.2.3.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 component.java-version   = 1.5
 component.deprecation    = true
 
