--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -26,23 +26,23 @@ component.resources-text = loci/formats/*.txt \
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
+                           ${lib.dir}/slf4j-api-1.5.10.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
 component.cp.no-poi      = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
 component.cp.no-netcdf   = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
