--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -30,8 +30,8 @@ component.resources-text = loci/formats/*.txt \
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/serializer-2.7.1.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/xalan-2.7.1.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of classes from ome-xml.jar
 component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
@@ -52,8 +52,8 @@ component.cp.no-jai      = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
 component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
@@ -63,5 +63,5 @@ component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
