Add ../../tools to surefire maven plugin classpath

--- a/components/ome-xml/pom.xml
+++ b/components/ome-xml/pom.xml
@@ -71,6 +71,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/ome/xml/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
