--- a/components/metakit/pom.xml
+++ b/components/metakit/pom.xml
@@ -66,6 +66,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/ome/metakit/utests/testng-template.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
