--- a/components/ome-io/pom.xml
+++ b/components/ome-io/pom.xml
@@ -101,6 +101,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/loci/ome/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
