--- a/components/scifio-devel/pom.xml
+++ b/components/scifio-devel/pom.xml
@@ -81,6 +81,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/ome/scifio/io/utests/testng-template.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
