--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -103,6 +103,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
